codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__user_image_labels_follow_the_painted_prompt_surface.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 2425
expression: "snapshots.join(\"\\n\")"
---
(255, 255, 255): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(126, 34, 206), bg: Rgb(249, 249, 249), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(249, 249, 249), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(126, 34, 206), bg: Rgb(249, 249, 249), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(249, 249, 249), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(18, 20, 30): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(194, 137, 249), bg: Rgb(55, 57, 66), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(55, 57, 66), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(194, 137, 249), bg: Rgb(55, 57, 66), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(55, 57, 66), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(95, 95, 95): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(13, 6, 20), bg: Rgb(120, 120, 120), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(120, 120, 120), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(13, 6, 20), bg: Rgb(120, 120, 120), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(120, 120, 120), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
